# drawing-automation-app

./: .gitignore  BUILD_FIXES.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: drawing_engine.rs  lib.rs  main.rs
src-tauri/src/drawing_engine/: continuous_line.rs  contour.rs  dithering.rs  matrix_dot.rs  scanline.rs  spiral_raster.rs  stippling.rs
src-tauri/src/image_processing/: processor.rs
src-tauri/src/mouse_control/: automation.rs  path_optimizer.rs
src/components/debug/: DebugConsole.tsx
src/components/drawing/: Controls.tsx
src/components/layout/: Header.tsx  MainArea.tsx  MiniPlayer.tsx  Sidebar.tsx
src/components/overlay/: ScreenshotModal.tsx
src/components/pages/: Settings.tsx
src/components/settings/: ColorPalette.tsx  DimensionTool.tsx  DrawingMethodSelector.tsx
src/components/ui/: Button.tsx  Card.tsx  SpeedControl.tsx
src/components/upload/: DropZone.tsx
src/hooks/: useTheme.ts
src/lib/: themes.ts
src/stores/: logStore.ts  settingsStore.ts
src/windows/: Overlay.tsx
