[package]
name = "sawbot"
version = "0.1.0"
description = "A lightweight, high-performance desktop drawing automation application"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.9", features = [] }
tauri-plugin-shell = "2.3"
tauri-plugin-dialog = "2.0"
tauri-plugin-global-shortcut = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25"
enigo = "0.2"
screenshots = "0.7"
fast_image_resize = "3.0"
device_query = "0.2"
base64 = "0.22"
imageproc = "0.25"
